[tool.poetry]
name = "tidal"
version = "0.1.0"
description = ""
authors = ["wittenator <wittenator@yahoo.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
jupyterlab = "^2.0"
ipykernel = "^5.1"
pandas = "^1.0"
rpy2 = "^3.2"
matplotlib = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
